# ADRLinter

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
app/cli/: config.py  main.py
app/services/: __init__.py  _extract_config.py  _extract_engine.py  _extract_prompts.py  adr_extract.py  commit_update.py  diff_processor.py  fqn.py  git_adapter.py  langextract.py  matching.py  models.py  pipeline.py  resolver.py  treesitter.py
app/services/adg/: __init__.py  merge.py  symbolic_resolver.py  treesitter.py
app/services/cpt/: __init__.py  diff_processor.py  dismissal.py  engine.py  git_adapter.py  resolution.py
app/services/extract/: __init__.py  engine.py  io.py  logging.py  pipeline.py  prompts.py
app/services/graph/: __init__.py  connector.py
app/tests/: conftest.py  test_main.py
app/tests/cli/: test_seed_export.py  test_seed_restore.py  test_violation_cli.py
app/tests/sanity/: e2e_test_cpt_detect.py  run_diffs.py  test_cpt_update.py  test_diff_processor.py  test_extract.py  test_langextract.py  test_seed_build.py
app/tests/services/: test_adr_pipeline.py  test_commit_update.py  test_constraint_models.py  test_diff_processor.py  test_extract.py  test_extract_eval.py  test_fqn.py  test_git_adapter.py  test_langextract.py  test_langextract_eval.py  test_parse_file.py  test_pipeline.py  test_resolver.py  test_treesitter.py
app/tests/services/adg/: test_merge.py  test_parse_file.py  test_resolution_eval.py  test_symbolic_resolver.py  test_treesitter.py
app/tests/services/cpt/: test_dismissal.py  (+4 more)
(+26 files in other folders)
