[project]
name = "adrlinter"
version = "0.1.0"
description = "CPT Detection System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.21",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
cpt = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.uv]
package = true
